# blackjackpp

./: .clang-format  .clang-tidy  .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  Rocket.toml  json-client.fish  meson.build  meson.options
.github/workflows/: build.yml  client-ci.yml  release.yml  server-ci.yml
client/: Cargo.toml  Dioxus.toml  package.json
client-src/: card.hpp  client_game.hpp  dealer.hpp  game.hpp  human.hpp  main.cpp  print.hpp  utils.hpp
client/assets/: tailwind.css
client/generated-client/: Cargo.toml  README.md
client/generated-client/.openapi-generator/: FILES
client/generated-client/docs/: Card.md  DefaultApi.md  Game.md  Hand.md  Player.md  Rank.md  State.md  Suit.md
client/generated-client/src/apis/: configuration.rs  default_api.rs
client/generated-client/src/models/: card.rs  game.rs  hand.rs  mod.rs  player.rs  rank.rs  state.rs  suit.rs
client/src/: app.rs  components.rs  main.rs  model.rs  net.rs
libjack/: Cargo.toml
libjack/src/: lib.rs  structs.rs
libjack/src/structs/: tests.rs
server/: Cargo.toml
server/src/: main.rs
src/: blackjack.cpp  card.cpp  dealer.cpp  deck.cpp  game.cpp  human.cpp  libjack.rs  main.rs  player.cpp  print.cpp  statistics.cpp
src/client/: client_game.hpp  main.cpp  meson.build
src/client/headers/: client_game.hpp  utils.hpp
src/client/src/: client_game.cpp  main.cpp
src/headers/: card.h  color.hpp  compatible.hpp  dealer.hpp  deck.hpp  game.hpp  human.hpp  player.hpp  print.hpp  random.hpp  statistics.hpp
src/lib/: card.hpp  deck.hpp  game.hpp  human.hpp  player.hpp  print.hpp  random.hpp  statistics.hpp  utils.hpp
src/libjack/: structs.rs  tests.rs
src/libjack/structs/: tests.rs
src/server/: bob.fish  gameManager.hpp  main.cpp  meson.build
src/server/headers/: gameManager.hpp
src/server/src/: main.cpp
