[package]
name = "svr-bj"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = [] }
fastrand = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.7", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
