[package]
name = "svr-bj"
version = "0.1.0"
edition = "2024"

[dependencies]
fastrand = "2.3.0"
serde = { version = "1.0.228" }
dioxus = { version = "0.7.1", features = ["fullstack"] }
tower-http = { version = "0.6.7", features = ["cors"], optional = true }
http-body-util = "0.1.3"
libjack = { path = "../libjack" }

[features]
default = ["server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tower-http"]
